<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    >
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="3dp"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="4dp"
        >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/cardLayout"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:padding="16dp"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@tools:sample/avatars[4]" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/source"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="@string/source_trial"
                    android:textColor="@color/secondary_text"
                    />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="@string/date_trial"
                    android:textColor="@color/secondary_text"/>
            </LinearLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/title_trial" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                tools:text="@string/desc_trial"
                android:textColor="@color/secondary_text"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>